--- a/loginstyle.css
+++ b/loginstyle.css
@@ -26,6 +26,14 @@
     width: 50%;
     background-color: #FBF1F1;
 }
+@media  screen and (max-width:  760px){
+    .left{
+        display: none;
+    }
+    .right{
+        width: 100%;
+    }
+}
 .logo1{
     width: 65%;
 }
