--- a/homestyle.css
+++ b/homestyle.css
@@ -606,3 +606,24 @@ h6{
     letter-spacing: 0.5px;
     margin: 30px 60px;
 }
+.anime{
+    margin-bottom: 15px;
+    font: 12px sans-serif;
+}
+.anime{
+    animation-duration: 10s;
+    animation-name: slidein;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+  }
+@keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
