--- a/homestyle.css
+++ b/homestyle.css
@@ -24,6 +24,42 @@
   position: fixed;
   z-index: 10; }
 
+.nav1{
+    position: relative;
+    margin-left: 10px;
+}
+.dropbtn {
+    padding: 5px;
+    font-size: 14px;
+    border: none;
+    margin: 10px;
+    background-color:white;
+  }
+.drop{
+    display: none;
+    position: absolute;
+    width: 200px;
+    z-index: 1;
+    padding: 10px;
+    font-size: 13px;
+    gap: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.drop a{
+color: black;
+text-decoration: none;
+display: block;
+padding: 5px 16px;
+transition: all 0.3s ease;
+font: 11px sans-serif;
+}
+.drop a:hover 
+{background-color: #ddd;}
+
+.nav1:hover .drop 
+{display: block;
+background-color: white;
+}
 .left > img {
   width: 200px; }
 
@@ -33,12 +69,6 @@
   align-items: center;
   gap: 10px;
   margin-right: 22px; }
-
-.right > select {
-  outline: none;
-  border: none;
-  color: #6F6F6F;
-  font: 14px Nunito, sans-serif; }
 
 .name {
   text-align: end;
